Visual changes including new NumberCardLayout

--- a/app/src/main/java/com/frankrichards/countdownnumbers/todo.txt
+++ b/app/src/main/java/com/frankrichards/countdownnumbers/todo.txt
@@ -1,6 +1,3 @@
-- Keep target and answer on game over screen --DONE--
+- Make gameplay look good
 - Make numbers fit in boxes
-- Move loading game (play again) to separate screen
-- Better transition from gameplay to result
-- Dark mode toggle
-- settings
+- Music & SFX
