Added looped music for infinite mode

--- a/app/src/main/java/com/frankrichards/quickmaths/todo.txt
+++ b/app/src/main/java/com/frankrichards/quickmaths/todo.txt
@@ -1,5 +1,3 @@
-- Make gameplay look good (done??)
 - Music & SFX
-- Skip button
 - Auto select cards
-- Fix weird wiggly text size
+- quit game crash?
