Bug fixes and music improvements
Game reset when go to background

--- a/app/src/main/java/com/frankrichards/quickmaths/todo.txt
+++ b/app/src/main/java/com/frankrichards/quickmaths/todo.txt
@@ -1,3 +1,5 @@
 - Music & SFX
 - Auto select cards
-- quit game crash?
+- music setting turns off music
+- stop music (+ gameplay?) when app is in background
+- add countdown to start of game
