--- a/app/src/main/java/com/frankrichards/quickmaths/todo.txt
+++ b/app/src/main/java/com/frankrichards/quickmaths/todo.txt
@@ -1,3 +1,3 @@
-- Music & SFX
 - Auto select cards
-- add countdown to start of game
+- time left on results screen
+- play games services for high score/daily puzzles/other online stuff
